--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,25 @@
   <url-pattern>*</url-pattern> 
   </filter-mapping>
   
+  <!-- 跨域的支持 -->
+  <filter>
+  <filter-name>CorsFilter</filter-name>
+  <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+  <init-param>
+        <param-name>cors.allowed.origins</param-name>
+        <param-value>*</param-value>
+  </init-param>
+  <init-param>
+        <param-name>cors.support.credentials</param-name>
+        <param-value>true</param-value>
+  </init-param>
+</filter>
+<filter-mapping>
+  <filter-name>CorsFilter</filter-name>
+  <url-pattern>/*</url-pattern>
+</filter-mapping>
+
+  
 
     
     <!-- Spring监听器 -->
